# python-typing

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
.long-task-harness/: SPEC.md  features.json  long-task-progress.md
assets/rules/: block-gratuitous-assert.md  block-type-ignore.md  warn-any-type.md  warn-cast-overuse.md
references/: faq.md  patterns.md
scripts/: analyze_typing.py  init_typing.py
tests/: conftest.py  test_analyze.py  test_init.py
tests/fixtures/partial/: api.py  main.py
tests/fixtures/untyped/: main.py  utils.py
